# qvina

./: .gitignore  CMakeLists.txt  Makefile  README.md
For Comparison/Debug/: qvina_split01  qvina_split02  vina_split112
For Comparison/Release/: qvina01  qvina02  vina112
data/: hsg1.pdbqt  ind.pdbqt  ind_out.pdbqt
src/: CMakeLists.txt
src/include/: macros.h  parallel.h  parallel_progress.h  quaternion.h
src/lib/: bfgs.h  cache.cpp  cache.h  common.h  conf.h  current_weights.cpp  everything.cpp  manifold.cpp  model.cpp  model.h  monte_carlo.cpp  monte_carlo.h  parallel_mc.cpp  parallel_mc.h  parallel_progress.cpp  parallel_progress.h  quasi_newton.cpp  quasi_newton.h  quaternion.cpp  tags  terms.cpp  visited.cpp  visited.h  visited_array.cpp  visited_binary_list.cpp  visited_binary_list.h  visited_binary_vector.cpp
src/lib/all_try_20110802/: bfgs.h  visited.cpp  visited_array.h  visited_binary_vector.h  visited_long.h
src/main/: main.cpp  tags
src/qvina2/: CMakeLists.txt  main.cpp
src/qvina2/include/: bfgs.h  common.h  conf.h  monte_carlo.h
src/qvina2/lib/: model.cpp  monte_carlo.cpp  quasi_newton.cpp  quaternion.cpp  visited.cpp
src/qvinaw/: CMakeLists.txt  main.cpp
src/qvinaw/include/: bfgs.h  common.h  monte_carlo.h  visited.h
src/qvinaw/lib/: manifold.cpp  parallel_mc.cpp  quasi_newton.cpp  visited.cpp
src/split/: split.cpp
src/vina/: CMakeLists.txt  vina.cpp
src/vina/include/: bfgs.h  coords.h
src/vina/lib/: cache.cpp  coords.cpp  grid.cpp  mutate.cpp  my_pid.cpp  naive_non_cache.cpp  parse_pdbqt.cpp  pdb.cpp  quasi_newton.cpp  random.cpp  ssd.cpp  szv_grid.cpp  visited.cpp  weighted_terms.cpp
src/vina_split/: vina_split.cpp
